# EscrowBot

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  ruff.toml
backend/: .gitignore  main.py  pyproject.toml  routers.py  services.py
backend/conf/: settings.py
backend/db/: connections.py  models.py  repositories.py
backend/migrations/: env.py
backend/migrations/versions/: 090d2c955a38_database_creation_v1_1.py  5294746ad66d_database_creation_v1_0.py  708c63367b95_database_creation_v1_0.py  d14b540bb5eb_database_creation_v1_1.py
backend/schemas/: schemas.py
front/: .env  bot.py  checker.py  contract.py  pyproject.toml
front/src/: contract_abi.json  token_abi.json
local_database/: docker-compose.yml
